--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
+body {
+  background-color: #96ada9;
+}
+
 .App {
+  background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+  padding: 30px;
+  width: 700px;
+  height: 700px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 20px;
+}
+
+.App > header {
+  background: pink;
+  color: blue;
+  margin: 20px;
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* text-align: center; */
+}
+
+.header > h1 {
+  /* color: #0f0f0f; */
+  text-transform: uppercase;
+  background: plum;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 40px;
+  /* font-weight: bold; */
+  letter-spacing: -1px;
+  line-height: 1;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.flex-row {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  display: flex;
+  padding: 20px;
 }
